# PhyloJumps

./: .gitignore  README.md  environment.yaml  pyproject.toml
examples/: README.md
examples/angio/: seed_mass_analysis.ipynb
examples/angio/data/: Angio_GIFT_Families_Mean_Seed_Mass.csv  Angio_GIFT_Families_Mean_Seed_Mass.tree
examples/angio/results/diagnostics/: diagnostics.json
examples/angio/results/summary/: 2147483648_summary.csv  2147483649_summary.csv  2147483650_summary.csv  2147483651_summary.csv  2147483652_summary.csv  2147483653_summary.csv  2147483654_summary.csv  2147483655_summary.csv
examples/synthetic/: 100.newick  README.md  createTree.R  data.csv  data_sim.py  ground_truth.npy  load_mcmc.py  run_pmcmc.py
examples/synthetic/results/summary/: 2147483648_summary.csv  2147483649_summary.csv  2147483650_summary.csv  2147483651_summary.csv  2147483652_summary.csv  2147483653_summary.csv
treeHPYPcts/: __init__.py  categorical.py  evals.py  hpypbase.py  jump_proposal.py  mcmc.py  norminvgamma.py  plots.py  utils.py
